--- a/matscholar_web/static/css/matscholar_web.css
+++ b/matscholar_web/static/css/matscholar_web.css
@@ -135,11 +135,15 @@ input.filter-value {
 }
 
 a {
-    color: #16ADAF;
+    color: #009EA2;
 }
 
 a:hover {
-    color: #128E91;
+    color: #005f61;
+}
+
+a:visited {
+  color: #5c00a3;
 }
 
 ._dash-undo-redo {
@@ -198,7 +202,7 @@ a:hover {
   padding: 10px 20px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 12px;
   border: 1px solid #aaa;
   border-radius: 4px;
   -webkit-appearance: none;
@@ -230,7 +234,7 @@ a:hover {
   background-color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 12px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   z-index: 2;
