get static image working by base64 encoding lol

--- a/matscholar_web/static/css/bulma.css
+++ b/matscholar_web/static/css/bulma.css
@@ -10597,3 +10597,10 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 /*# sourceMappingURL=bulma.css.map */
+
+
+/* Matscholar specific classes */
+.msweb-center-image {
+    width: 300;
+    align: center;
+}
