--- a/matscholar_web/static/css/bulma.css
+++ b/matscholar_web/static/css/bulma.css
@@ -1,3 +1,10 @@
+
+/* Matscholar specific classes */
+msweb-bigfont {
+    font-size: 42px !important;
+}
+
+
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
@@ -10598,9 +10605,3 @@ label.panel-block:hover {
 }
 /*# sourceMappingURL=bulma.css.map */
 
-
-/* Matscholar specific classes */
-.msweb-center-image {
-    width: 300;
-    align: center;
-}
