slightly more sane search bar, no colors on entity tables

--- a/matscholar_web/static/css/msweb.css
+++ b/matscholar_web/static/css/msweb.css
@@ -53,3 +53,9 @@
   cursor: pointer;
   padding: 10px 20px;
 }
+
+
+.msweb-entity-result-table-blue{
+    color: white
+    background-color: #1086CA;
+}
