wip hidden bar and merged search, with anchor links to sections, default everything search type

--- a/matscholar_web/static/css/msweb.css
+++ b/matscholar_web/static/css/msweb.css
@@ -63,3 +63,14 @@
 .msweb-is-tall-container {
     flex: 1;
 }
+
+
+
+details[open] summary ~ * {
+  animation: sweep .5s ease-in-out;
+}
+
+@keyframes sweep {
+  0%    {opacity: 0; margin-left: -10px}
+  100%  {opacity: 1; margin-left: 0px}
+}
