--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -78,3 +78,38 @@ details[open] summary ~ * {
   0%    {opacity: 0; margin-left: 0px}
   100%  {opacity: 1; margin-left: 0px}
 }
+
+
+/* Tooltips */
+.tooltip {
+    display:inline-block;
+    position:relative;
+    text-align:left;
+}
+
+.tooltip .tooltip-text {
+    padding:10px 20px;
+    /* position:absolute; */
+    z-index:99999999;
+    visibility:hidden; opacity:0; transition:opacity 0.8s;
+}
+
+.tooltip:hover .tooltip-text {
+    visibility:visible; opacity:1;
+}
+
+.tooltip .tooltip-text i {
+    position:absolute;
+    overflow:hidden;
+}
+
+.tooltip .tooltip-text i::after {
+    content:'';
+    /* position:absolute; */
+    width:12px;
+    height:12px;
+    left:50%;
+    transform:translate(-50%,-50%) rotate(45deg);
+    background-color:#EEEEEE;
+    box-shadow:0 1px 8px rgba(0,0,0,0.5);
+}
