update some more colors

--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -138,3 +138,11 @@ details[open] summary ~ * {
 .msweb-is-pink-txt {
     color: #D648D2;
 }
+
+.msweb-is-aqua-txt {
+    color: #14DADA;
+}
+
+.msweb-is-yellow-txt {
+    color: #CAB508;
+}
