--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -115,6 +115,10 @@ details[open] summary ~ * {
     color: #37C624;
 }
 
+.msweb-is-dark-green-txt {
+    color: #277534;
+}
+
 .msweb-is-blue-txt {
     color: #5073F5;
 }
