add underlines for the page you're currently on

--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -169,3 +169,16 @@ details[open] summary ~ * {
 .msweb-ubuntu {
     font-family: Ubuntu, "sans-serif"
 }
+
+
+.navbar-item:hover {
+    transition: 0.5s;
+}
+
+.navbar-link:hover {
+    transition: 0.3s;
+}
+
+.msweb-is-underlined {
+    text-decoration: underline;
+}
