make navbar highlighting a little better

--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -180,5 +180,6 @@ details[open] summary ~ * {
 }
 
 .msweb-is-underlined {
-    text-decoration: underline;
+   text-decoration: none;
+    border-bottom: 4px solid white;
 }
