--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -186,13 +186,13 @@ details[open] summary ~ * {
 }
 
 
-.msweb-clicker-red {
+.msweb-clicker-green {
     -moz-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     -webkit-transition: all .2s ease-in;
     transition: all .2s ease-in;
 }
 
-.msweb-clicker-red:hover {
-    color: #ff0f0f;
+.msweb-clicker-green:hover {
+    color: #099e1d;
 }
