--- a/matscholar_web/assets/msweb.css
+++ b/matscholar_web/assets/msweb.css
@@ -8,12 +8,12 @@
 }
 
 .react-autosuggest__input {
-  width: 240px;
-  height: 30px;
+  width: 100%;
+  height: 60px;
   padding: 10px 20px;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 32px;
   border: 1px solid #aaa;
   border-radius: 4px;
 }
@@ -35,7 +35,7 @@
   display: block;
   position: absolute;
   top: 51px;
-  width: 280px;
+  width: 100%;
   border: 1px solid #aaa;
   background-color: #fff;
   font-family: Helvetica, sans-serif;
@@ -47,8 +47,8 @@
 }
 
 .react-autosuggest__suggestions-list {
-  margin: 0;
-  padding: 0;
+  margin: 5;
+  padding: 5;
   list-style-type: none;
 }
 
